# PowersOfTau-SGX

./: .gitignore  Dockerfile  Makefile  README.md
app/: Cargo.toml  build.rs
app/src/: batched_accumulator.rs  keypair.rs  main.rs  parameters.rs  utils.rs
app/src/small_bn256/: mod.rs
docker/: Dockerfile  Dockerfile_run  entrypoint.sh
docker/attestation/: Dockerfile  README.md  challenge  compute_constrained_sgx  entrypoint.sh
docker/sgx-fun/: Dockerfile  README.md
docker/sgx-hardware/: Dockerfile  README.md
docker/sgx-runtime/: Dockerfile  entrypoint.sh
enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile  public_key.pem
enclave/src/: keypair.rs  keystore.rs  lib.rs  parameters.rs  utils.rs
lib/: README.md
