[package]
name = "compute_constrained_sgx"
version = "1.0.0"
authors = ["eduadiez"]
build = "build.rs"

[dependencies]
sgx_types = { version = "1.0.9" }
sgx_urts = { version = "1.0.9" }
dirs = "1.0.2"

rand = "0.4"
blake2 = "0.6.1"
memmap = "0.7.0"
typenum = "1.9.0"
num_cpus = "1.7.0"
crossbeam = "0.3.0"
itertools = "0.8.0"
byteorder = "1.1.0"
bellman_ce = "0.3.1"
generic-array = "0.8.3"
hex = "0.4.0"
base64 = "0.11.0"

