[package]
name = "SGXPowersOfTau"
version = "1.0.0"
authors = ["eduadiez"]

[lib]
name = "sgxpowersoftau"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { version = "1.0.9" }
sgx_tstd = { version = "1.0.9" }
sgx_rand = { version = "1.0.9" }

pairing = { package = "pairing_ce", git = "https://github.com/eduadiez/pairing_ce-sgx.git", rev = "14feb0c" }
byteorder = { git = "https://github.com/eduadiez/byteorder.git", rev = "f981220" }

blake2 = { version = "0.8", default-features = false }
typenum = { version = "1.11.2", features = ["no_std"] } 
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }
